--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,14 @@ domain = "localhost"
 # duration of the certificate in hour
 duration = 1
 # display of /films/ (use go template format)
-film_display = """
+
+[film]
+index = """
+# Film
+{{ range .Films }}
+=> /films/{{.Path}} {{ .Title }}{{ end }}
+"""
+display = """
 # {{ .Title }}
 {{ range .Tags }}
 => /films/tag/{{ escape . }} {{ . }}{{ end }}
