--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # domain to use when creating the certificate (could be *)
 domain = "localhost"
-# duration of the certificate in hour
+# duration of the certificate in days
 duration = 1
 
 # display of all contents in /films/ (use go template format)
